# remedian

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
benches/: bench.rs
examples/: custom_data.rs  full.rs  minimal.rs
src/: lib.rs
test_data/: 2000_values.txt
