[package]
name = "remedian"
description = " A Rust implementation of The Remedian"
version = "0.1.0"
authors = ["Rose Peck"]
repository = "https://github.com/sixfold-origami/remedian"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["median", "statistics"]

[features]
default = ["logging"]
logging = ["log"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
log = { version = "0.4.22", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
